dev-eks-k8s/frontend/6-rollout.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: frontend
  namespace: dev
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: frontend
        istio: monitor
    spec:
      containers:
      - name: frontend
        # image: devopsflow999/frontend:test400
        image: devopsflow999/frontend:909
        ports:
        - name: http
          containerPort: 80
          protocol: TCP
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 256Mi
  strategy:
    canary:
      canaryService: frontend-canary
      stableService: frontend-stable
      scaleDownDelaySeconds: 60
      # analysis will be performed in background, while rollout is progressing through its steps
      # analysis:
      #   startingStep: 1   # index of step list, of when to start this analysis
      #   templates:
      #   - templateName: frontend-canary-quality
        # args:             # arguments allow AnalysisTemplates to be re-used
        # - name: service 
        #   value: frontend-canary
        # - name: namespace
        #   valueFrom:
        #     fieldRef:
        #       fieldPath: metadata.namespace
      trafficRouting:
        istio:
          virtualService:
            name: frontend-vsvc
            routes:
            - primary
      steps:
      - setWeight: 10
      - pause: {}         # pause indefinitely
      - setWeight: 20
      - pause: {duration: 20s}
      - setWeight: 30
      - pause: {duration: 20s}
      - setWeight: 40
      - pause: {duration: 20s}
      - setWeight: 50
      - pause: {duration: 20s}
      - setWeight: 60
      - pause: {duration: 20s}
      - setWeight: 70
      - pause: {duration: 20s}
      - setWeight: 80
      - pause: {duration: 20s}
      - setWeight: 90
      - pause: {duration: 20s}
