dev-eks-k8s/frontend/3-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-canary
  namespace: dev
spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: frontend

---
apiVersion: v1
kind: Service
metadata:
  name: frontend-stable
  namespace: dev

spec:
  ports:
  - port: 80
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: frontend
