dev-eks-k8s/frontend/2-vs.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-vsvc
  namespace: demo
spec:
  gateways:
    - frontend-gateway   # updated Gateway with HTTPS
  hosts:
    - "travelersources.com"
  http:
    - name: canary-debug
      match:
        - headers:
            x-canary:
              exact: "true"
      route:
        - destination:
            host: frontend-canary
          weight: 100
    - name: primary
      route:
        - destination:
            host: frontend-stable
          weight: 100
        - destination:
            host: frontend-canary
          weight: 0
